add token_currency as param to tx/flows, dev10
