# openapi_server/openapi/openapi.yaml
@@ -2042,6 +2042,15 @@ paths:
             default: false
             type: boolean
           style: form
+        - description: Return transactions of given token or base currency
+          example: WETH
+          explode: true
+          in: query
+          name: token_currency
+          required: false
+          schema:
+            type: string
+          style: form
         - description: Resumption token for retrieving the next page
           example: ""
           explode: true
